--- a/app/src/main/res/layout/activity_community_writing.xml
+++ b/app/src/main/res/layout/activity_community_writing.xml
@@ -103,6 +103,7 @@
                     android:hint="내용을 입력해주세요" />
 
                 <ImageButton
+                    android:id="@+id/community_write_imgBTN"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
