--- a/app/src/main/res/layout/activity_post_inside_community.xml
+++ b/app/src/main/res/layout/activity_post_inside_community.xml
@@ -46,6 +46,7 @@
                 android:layout_height="60dp">
 
                 <ImageView
+                    android:id="@+id/user_img_community_post"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:scaleType="centerInside"
@@ -108,6 +109,10 @@
                     android:text="방금 동작역쪽에서 핸드폰 잃어버렸는데 혹시 보신 분 있으실까요ㅠㅠㅠ 사례금 드릴게요ㅠㅜㅜ"
                     android:textColor="#687F9F"
                     android:textStyle="bold" />
+                <ImageView
+                    android:id="@+id/downloaded_imageview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="100dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -115,15 +120,15 @@
                     android:orientation="horizontal">
 
                     <LinearLayout
+                        android:gravity="center"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
                         <ImageView
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
+                            android:layout_width="15dp"
+                            android:layout_height="15dp"
                             android:src="@drawable/heartcount" />
-
                         <TextView
                             android:id="@+id/heartCount_community_post"
                             android:layout_width="wrap_content"
@@ -134,23 +139,23 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity=""
-                        android:layout_marginLeft="220dp"
-                        android:gravity="left"
+                        android:gravity="right"
                         android:orientation="horizontal">
 
                         <ImageView
+                            android:id="@+id/heart_community_post"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
-                            android:src="@drawable/heartcount" />
+                            android:src="@drawable/heart" />
 
                         <ImageView
+                            android:id="@+id/star_community_post"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
                             android:layout_marginLeft="10dp"
-                            android:src="@drawable/star" />
+                            android:src="@drawable/star_blank" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
