--- a/app/src/main/res/layout/item_community.xml
+++ b/app/src/main/res/layout/item_community.xml
@@ -17,7 +17,7 @@
             android:textStyle="bold"
             android:textColor="#3c567b"/>
         <ImageView
-            android:id="@+id/commu_post_heart"
+            android:id="@+id/heart"
             android:layout_marginEnd="10dp"
             android:layout_toStartOf="@id/star"
             android:layout_width="wrap_content"
@@ -31,9 +31,9 @@
             android:src="@drawable/star_blank"/>
         <TextView
             android:id="@+id/heart_count"
-            android:layout_below="@id/commu_post_heart"
-            android:layout_alignLeft="@id/commu_post_heart"
-            android:layout_alignRight="@id/commu_post_heart"
+            android:layout_below="@id/heart"
+            android:layout_alignLeft="@id/heart"
+            android:layout_alignRight="@id/heart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="10개"
