--- a/app/src/main/res/layout/activity_post_inside092.xml
+++ b/app/src/main/res/layout/activity_post_inside092.xml
@@ -101,24 +101,46 @@
             <LinearLayout
                 android:id="@+id/post_tissueText"
                 android:gravity="center_vertical"
-                android:layout_width="270dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:paddingLeft="20dp">
-                <TextView
-                    android:id="@+id/itemName_09_2"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="#3C567B"
-                    android:textStyle="bold"
-                    android:text="제품명 : 깨끗한나라 물티슈 70매 x 10개"/>
-                <TextView
-                    android:id="@+id/price_09_2"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#3C567B"
+                        android:textStyle="bold"
+                        android:text="제품명 : "/>
+                    <TextView
+                        android:id="@+id/itemName_092"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#3C567B"
+                        android:textStyle="bold"
+                        android:text="깨끗한나라 물티슈 70매 x 10개"/>
+                </LinearLayout>
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="#3C567B"
-                    android:textStyle="bold"
-                    android:text="가격 : 19,900원(인당 1,990원)"/>
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#3C567B"
+                        android:textStyle="bold"
+                        android:text="가격 : "/>
+                    <TextView
+                        android:id="@+id/price_092"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#3C567B"
+                        android:textStyle="bold"
+                        android:text="19,900원(인당 1,990원)"/>
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
 
