--- a/app/src/main/res/layout/activity_mypage_gonggu.xml
+++ b/app/src/main/res/layout/activity_mypage_gonggu.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:padding="20dp"
     android:layout_height="match_parent"
     android:orientation="vertical">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="20dp">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        >
         <ImageView
             android:id="@+id/backBtn"
             android:layout_width="38dp"
@@ -20,7 +22,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="스크랩"
+                android:text="MY 공구&amp;여가생활"
                 android:textColor="#3c567b"
                 android:textStyle="bold"
                 android:textSize="25sp"/>
@@ -36,6 +38,11 @@
         </LinearLayout>
 
     </RelativeLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/mypage_myGonggu_recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 
 
 </LinearLayout>
