--- a/app/src/main/res/layout/activity_post_inside09.xml
+++ b/app/src/main/res/layout/activity_post_inside09.xml
@@ -250,83 +250,17 @@
                 android:textStyle="bold"
                 android:textSize="19dp"
                 android:textColor="#3C567B"/>
-            <RelativeLayout
-                android:padding="8dp"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/chat_recyclerView_09"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:background="@drawable/post_background"
-                android:layout_marginTop="15dp">
-                <LinearLayout
-                    android:id="@+id/comment"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="#3C567B"
-                        android:textStyle="bold"
-                        android:textSize="16dp"
-                        android:text="강아지 사랑"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="#3C567B"
-                        android:textStyle="bold"
-                        android:textSize="14dp"
-                        android:text="바로 사야겠네요!!!"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="2023.10.25 13:12"
-                        android:textSize="13dp"/>
-                </LinearLayout>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="대댓글 달기"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignBottom="@id/comment"/>
-
-            </RelativeLayout>
-
-            <LinearLayout
-                android:paddingTop="10dp"
-                android:paddingLeft="30dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="ㄴ "
-                    android:textStyle="bold"/>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="#3C567B"
-                        android:textStyle="bold"
-                        android:textSize="14dp"
-                        android:text="옥지얌"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="#3C567B"
-                        android:textStyle="bold"
-                        android:textSize="14dp"
-                        android:text="저도 참여해야겠네요 ㅎㅎ!"/>
-                </LinearLayout>
-            </LinearLayout>
+                android:layout_height="match_parent"
+                android:layout_marginBottom="70dp"/>
         </LinearLayout>
 
     </LinearLayout>
 
-    <EditText
+    <LinearLayout
+        android:id="@+id/chat_box"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_alignParentBottom="true"
@@ -335,10 +269,63 @@
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
         android:background="@drawable/text_background"
-        android:drawableRight="@drawable/send"
-        android:hint="댓글을 입력하세요."
-        android:textSize="15dp"
         android:paddingLeft="30dp"
-        android:paddingRight="15dp" />
+        android:paddingRight="15dp"
+        android:orientation="horizontal">
+        <EditText
+            android:id="@+id/chat_text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"
+            android:layout_weight="1"
+            android:hint="댓글을 입력하세요."/>
+        <ImageButton
+            android:id="@+id/send_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:layout_gravity="center"
+            android:src="@drawable/send"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/nested_chat_box"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:background="@drawable/text_background"
+        android:paddingLeft="30dp"
+        android:paddingRight="15dp"
+        android:orientation="horizontal"
+        android:visibility="invisible">
+        <EditText
+            android:id="@+id/nested_chat_text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"
+            android:layout_weight="1"
+            android:hint="대댓글을 입력하세요."/>
+        <ImageButton
+            android:id="@+id/nested_send_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:layout_gravity="center"
+            android:src="@drawable/send"/>
+    </LinearLayout>
+    <Button
+        android:visibility="invisible"
+        android:id="@+id/nested_cancel_btn"
+        android:layout_width="wrap_content"
+        android:textColor="#3C567B"
+        android:layout_height="30dp"
+        android:text="대댓글 취소"
+        android:layout_alignStart="@id/chat_box"
+        android:background="@drawable/text_cancel"
+        android:layout_above="@id/chat_box"
+        android:layout_marginBottom="-10dp"/>
 
 </RelativeLayout>
