--- a/app/src/main/res/layout/activity_mypage_gonggu.xml
+++ b/app/src/main/res/layout/activity_mypage_gonggu.xml
@@ -1,48 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="20dp"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-    <RelativeLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/refreshLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        >
-        <ImageView
-            android:id="@+id/backBtn"
-            android:layout_width="38dp"
-            android:layout_height="38dp"
-            android:src="@drawable/baseline_arrow_back_24"/>
-        <LinearLayout
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="MY 공구&amp;여가생활"
-                android:textColor="#3c567b"
-                android:textStyle="bold"
-                android:textSize="25sp"/>
-
+            android:layout_marginBottom="20dp"
+            >
             <ImageView
-                android:layout_marginStart="10dp"
-                android:layout_gravity="center"
-                android:id="@+id/image_cart_09"
-                android:layout_width="wrap_content"
-                android:layout_height="35dp"
-                android:src="@drawable/cart" />
+                android:id="@+id/backBtn"
+                android:layout_width="38dp"
+                android:layout_height="38dp"
+                android:src="@drawable/baseline_arrow_back_24"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="MY 공구&amp;여가생활"
+                    android:textColor="#3c567b"
+                    android:textStyle="bold"
+                    android:textSize="25sp"/>
 
-        </LinearLayout>
+                <ImageView
+                    android:layout_marginStart="10dp"
+                    android:layout_gravity="center"
+                    android:id="@+id/image_cart_09"
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp"
+                    android:src="@drawable/cart" />
 
-    </RelativeLayout>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/mypage_myGonggu_recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+            </LinearLayout>
 
+        </RelativeLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/mypage_myGonggu_recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
-
-</LinearLayout>
+    </LinearLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
