최신 게시물 3개 보이기 완료

--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -63,24 +63,10 @@
                             android:layout_height="28dp"
                             android:src="@drawable/community_1"
                             android:layout_gravity="center"/>
-                        <TextView
-                            android:layout_marginTop="10dp"
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/community_recyclerView1"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/whiteblue"
-                            android:text="햇반2종"/>
-                        <TextView
-                            android:layout_marginTop="10dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/whiteblue"
-                            android:text="햇반2종"/>
-                        <TextView
-                            android:layout_marginTop="10dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/whiteblue"
-                            android:text="햇반2종"/>
+                            android:layout_height="match_parent"/>
                     </LinearLayout>
 
                     <LinearLayout
@@ -96,24 +82,10 @@
                             android:layout_height="30dp"
                             android:src="@drawable/community_2"
                             android:layout_gravity="center"/>
-                        <TextView
-                            android:layout_marginTop="10dp"
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/community_recyclerView2"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/whiteyellow"
-                            android:text="햇반2종"/>
-                        <TextView
-                            android:layout_marginTop="10dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/whiteyellow"
-                            android:text="햇반2종"/>
-                        <TextView
-                            android:layout_marginTop="10dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/whiteyellow"
-                            android:text="햇반2종"/>
+                            android:layout_height="match_parent"/>
                     </LinearLayout>
                     <LinearLayout
                         android:id="@+id/community_cook_pageBTN"
@@ -128,24 +100,10 @@
                             android:layout_height="30dp"
                             android:src="@drawable/community_3"
                             android:layout_gravity="center"/>
-                        <TextView
-                            android:layout_marginTop="10dp"
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/community_recyclerView3"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/whitepink"
-                            android:text="햇반2종"/>
-                        <TextView
-                            android:layout_marginTop="10dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/whitepink"
-                            android:text="햇반2종"/>
-                        <TextView
-                            android:layout_marginTop="10dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/whitepink"
-                            android:text="햇반2종"/>
+                            android:layout_height="match_parent"/>
                     </LinearLayout>
                 </LinearLayout>
             </ScrollView>
