--- a/app/src/main/res/layout/fragment_community3.xml
+++ b/app/src/main/res/layout/fragment_community3.xml
@@ -54,91 +54,10 @@
                 android:background="@drawable/blue"
                 />
         </LinearLayout>
-            <LinearLayout
-                android:layout_marginBottom="20dp"
-                android:layout_marginTop="10dp"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/community3_rank_recyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <LinearLayout
-                    android:layout_weight="1"
-                    android:layout_width="90dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="1"
-                        android:textSize="20sp"
-                        android:textColor="#3c567b"
-                        android:gravity="center"
-                        android:textStyle="bold"/>
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_gravity="center"
-                        app:cardElevation="0dp"
-                        app:cardCornerRadius="15dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-                        <ImageView
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:src="@drawable/test"/>
-                    </androidx.cardview.widget.CardView>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_weight="1"
-                    android:layout_width="90dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <TextView
-                        android:textSize="20sp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="2"
-                        android:textColor="#3c567b"
-                        android:gravity="center"
-                        android:textStyle="bold"/>
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_gravity="center"
-                        app:cardElevation="0dp"
-                        app:cardCornerRadius="15dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-                        <ImageView
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:src="@drawable/test"/>
-                    </androidx.cardview.widget.CardView>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_weight="1"
-                    android:layout_width="90dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <TextView
-                        android:textSize="20sp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="3"
-                        android:textColor="#3c567b"
-                        android:gravity="center"
-                        android:textStyle="bold"/>
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_gravity="center"
-                        app:cardElevation="0dp"
-                        app:cardCornerRadius="15dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-                        <ImageView
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:src="@drawable/test"/>
-                    </androidx.cardview.widget.CardView>
-                </LinearLayout>
-            </LinearLayout>
+                android:layout_height="wrap_content"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/community3_recyclerView"
