1,2,3순위 크기 조정

--- a/app/src/main/res/layout/fragment_community2.xml
+++ b/app/src/main/res/layout/fragment_community2.xml
@@ -54,11 +54,17 @@
                     android:background="@drawable/blue"
                     />
             </LinearLayout>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/community2_rank_recyclerView"
+            <LinearLayout
+                android:layout_gravity="center"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/community2_rank_recyclerView"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/community2_recyclerView"
