--- a/app/src/main/res/layout/activity_find_password.xml
+++ b/app/src/main/res/layout/activity_find_password.xml
@@ -5,6 +5,7 @@
     android:padding="20dp">
 
     <ImageView
+        android:id="@+id/backBtn"
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:src="@drawable/baseline_arrow_back_24"/>
