--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -94,24 +94,18 @@
                         android:layout_height="match_parent"
                         android:background="#3c567b"/>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginEnd="20dp"
-                        android:text="선택하세요."
-                        android:textSize="17sp"
-                        android:textColor="#3c567b"
-                        android:textStyle="bold" />
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="end">
 
-                        <ImageView
-                            android:layout_width="wrap_content"
+                        <Spinner
+                            android:layout_width="100dp"
                             android:layout_height="wrap_content"
-                            android:src="@drawable/arrow_down" />
+                            android:id="@+id/spinner_report"
+                            android:layout_weight="0.2"
+                            />
                     </LinearLayout>
 
 
@@ -122,6 +116,7 @@
 
 
             <EditText
+                android:id="@+id/title_report"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#3c567b"
@@ -137,6 +132,7 @@
                 android:background="@drawable/whiteblue">
 
                 <EditText
+                    android:id="@+id/content_report"
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
                     android:gravity="top"
@@ -144,6 +140,7 @@
                     android:background="@android:color/transparent"/>
 
                 <ImageButton
+                    android:id="@+id/imgBtn_report"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
@@ -158,6 +155,7 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/writeBtn_report"
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
