--- a/app/src/main/res/layout/activity_post_inside092.xml
+++ b/app/src/main/res/layout/activity_post_inside092.xml
@@ -14,13 +14,14 @@
             android:layout_width="38dp"
             android:layout_height="38dp"
             android:src="@drawable/baseline_arrow_back_24"/>
+
         <ImageView
-            android:layout_marginTop="5dp"
             android:id="@+id/image_cart_09"
             android:layout_width="match_parent"
             android:layout_height="33dp"
-            android:src="@drawable/_9"
-            android:gravity="center" />
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:src="@drawable/_9_1" />
     </RelativeLayout>
 
     <LinearLayout
