--- a/app/src/main/res/layout/activity_post_inside_playing.xml
+++ b/app/src/main/res/layout/activity_post_inside_playing.xml
@@ -98,6 +98,7 @@
             android:paddingLeft="20dp"
             android:layout_marginTop="15dp">
             <LinearLayout
+                android:paddingTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -110,13 +111,12 @@
                     android:text="장소 : "/>
                 <TextView
                     android:id="@+id/place_leisure"
-                    android:paddingTop="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#3C567B"
                     android:textStyle="bold"
                     android:textSize="18dp"
-                    android:text="롯데월드"/>
+                    android:text="장소"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
