--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -53,6 +53,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="₩259,300"
+                    android:id="@+id/consumption_txt"
                     android:textSize="18sp"
                     android:textStyle="bold"
                     android:textColor="#3c567b"/>
