--- a/app/src/main/res/layout/fragment_community1.xml
+++ b/app/src/main/res/layout/fragment_community1.xml
@@ -94,10 +94,11 @@
                 </LinearLayout>
 
                 <Button
+                    android:background="@drawable/whiteblue"
                     android:layout_gravity="right"
                     android:id="@+id/community_update"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="35dp"
                     android:text="update"
                     android:textStyle="bold"
                     android:textColor="#3c567b"/>
