--- a/app/src/main/res/layout/activity_post_inside_playing.xml
+++ b/app/src/main/res/layout/activity_post_inside_playing.xml
@@ -50,7 +50,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:scaleType="centerInside"
-                    android:src="@drawable/dog" />
+                    android:src="@drawable/human" />
             </androidx.cardview.widget.CardView>
             <LinearLayout
                 android:id="@+id/post_userText"
